<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.poultry_manager.WeightFragment"
    android:baselineAligned="false">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Weighing of Birds"
                android:textStyle="italic"
                android:textSize="17sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="17sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Weight gain chart"
                android:textStyle="italic"
                android:textSize="17sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight0"
                android:textSize="17sp"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Age
 (week{s})"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Feed taken
(grammes)"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="center"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weight gain
(grammes)"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:layout_weight="1"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3.3"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="27"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:layout_weight="1"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="152"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="77"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:layout_weight="1"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="229"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="77"
                        android:layout_weight="1"
                        android:gravity="center"
                        />
                </TableRow>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weight control"
                    android:textStyle="italic"
                    android:textSize="17sp"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight1"
                    android:textSize="17sp"/>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
